Fixed bug where map does not display after loading first igc file if no task is defined. Fixed bug where zoom buttons are not cleared if no task is loaded for the next igc file. Significant changes in css to increase border width round map on narrow screens. Slider thumb size increased for narrow screens (so far Webkit only)

--- a/igcviewer.css
+++ b/igcviewer.css
@@ -256,6 +256,7 @@ min-height: 25vw;
      
 #showmap {
 display: none;
+visibility: hidden;
 }
      
     div.halfwidth {
@@ -274,7 +275,6 @@ display: none;
     height: 80vh;
     min-height: 25vw;
     margin-bottom: 15px;
-    visibility: hidden;
     position: sticky;
 }
 
@@ -307,45 +307,36 @@ button.toggle {
      font-size: 2em;
  }
     
-    div.halfwidth   {
-        display: block;
-        width: 90%;
-        margin-left: auto;
-      margin-right: auto;
+div.halfwidth   {
+    display: block;
+      width: 90%;
+      margin: 0 auto;
     } 
     
 #righthalf, #mapwrapper  {
 height:  65vh;
 min-height: 25vw;
+position: absolute;
+background: #E0FFFF;
+width: 100%;
 }
     
-    #map,#barogram {
-    width: 100%;
-    height: 60vh;
-    margin-bottom: 15px;
-    padding-left: 0;
-    position: absolute;
-    top: 0;
-    left: 0;
+#mapwrapper {
+z-index: 10;
 }
 
 #map {
     z-index:10;
     height: 65vh;
+   width: calc(100% - 60px);
+    margin: 0 auto;
 }
 
 #barogram {
     cursor: crosshair;
     z-index: 1;
     height: 65vh;
-    background: #E0FFFF;
-}
-
-#righthalf   {
-position: absolute;
-top:0;
-left: 0;
-visibility: hidden;
+    background-color: #E0FFFF;
 }
 
 #headerInfo th {
@@ -355,12 +346,16 @@ visibility: hidden;
 
 #infobox {
 position: relative;
+width: 100%;
+visibility: hidden;
 }
+
 
 #showmap {
 position: absolute;
-top: 61vh;
-z-index: 15;
+left: 10px;
+top: 60vh;
+z-index: 25;
 display: none;
 }
 
@@ -373,8 +368,9 @@ z-index: 20;
 
 #zoomdiv {
 position: absolute;
+left: 30px;
 top: 8vh;
-width: 90%;
+width: calc(100% - 70px);
 background-color: white;
 z-index: 1;
 }
@@ -408,7 +404,26 @@ height: 45px;
 }
 
 div.colour {
-    background-color: aqua;
+
 }
 
+
+input[type=range]{
+    -webkit-appearance: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+    height: 15px;
+    background: #ddd;
+     width: 30px;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border: none;
+    height: 36px;
+    width: 36px;
+    background: darkgrey;
+    margin-top: -12px;
+}
 }    
